# precipitation-timeseries-analysis

./: LICENSE  Makefile  README.md  pyproject.toml
data/raw/: Precipitation_complete.csv
notebooks/: precipitation-timeseries-analysis.ipynb  timeseries_precipitation_forecasting.ipynb
src/: timeseries_analysis.py
